# stock-drop-analysis

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
backend/app/core/: __init__.py  data_pipeline.py  earnings.py  factors.py  features.py  macro_calendar.py  market_events.py  synthetic.py  validation.py
backend/app/models/: __init__.py  _plot.py  classification.py  clustering.py  ensembles.py  explain.py  regression.py
backend/app/services/: __init__.py  analysis_service.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_attribution.py  test_data_pipeline.py  test_dependencies.py  test_earnings.py  test_features.py  test_live_contract.py  test_market_events.py  test_models.py  test_selection.py  test_sentiment.py  test_validation.py
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  api.js  format.js  main.jsx  styles.css
frontend/src/components/: DatasetPills.jsx  Explanations.jsx  Figures.jsx  SectionCard.jsx  Sidebar.jsx  States.jsx  Tables.jsx  TickerPicker.jsx
